[gd_scene load_steps=3 format=3 uid="uid://bcmcgtkjwv2w1"]

[ext_resource type="Script" uid="uid://dasda15uveocx" path="res://addons/RPG_Maker_Database/Editors/Databases/Item/item_database.gd" id="1_n1d3n"]
[ext_resource type="Texture2D" uid="uid://dtmg6im6vp32p" path="res://icon.svg" id="1_txkt2"]

[node name="Items" type="Control" node_paths=PackedStringArray("name_edit", "desc_edit", "texture", "item_type_button", "price_box", "consumable_button", "scope_option_button", "number_option_button", "random_spin_box", "occaision_option_button", "animation_option_button", "speed_spin_box", "success_spin_box", "repeat_spin_box", "tp_gain_spin_box", "damage_type_option_button", "element_type_option_button", "formula_editor", "notes_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n1d3n")
name_edit = NodePath("ScrollContainer/BoxContainer/2nd Column/NameEdit")
desc_edit = NodePath("ScrollContainer/BoxContainer/2nd Column/DescEdit")
texture = NodePath("ScrollContainer/BoxContainer/2nd Column/HBoxContainer/IconTexture")
item_type_button = NodePath("ScrollContainer/BoxContainer/2nd Column/HBoxContainer3/ItemTypeButton")
price_box = NodePath("ScrollContainer/BoxContainer/2nd Column/HBoxContainer3/PriceBox")
consumable_button = NodePath("ScrollContainer/BoxContainer/2nd Column/HBoxContainer3/ConsumableButton")
scope_option_button = NodePath("ScrollContainer/BoxContainer/2nd Column/Scope Row/ScopeContainer/ScopeOptionButton")
number_option_button = NodePath("ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn/NumberOption")
random_spin_box = NodePath("ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn/RandomSpinBox")
occaision_option_button = NodePath("ScrollContainer/BoxContainer/2nd Column/Scope Row/OccasionContainer/OccaisonOptionButton")
animation_option_button = NodePath("ScrollContainer/BoxContainer/2nd Column/Scope Row/Container5/AnimationOptionButton")
speed_spin_box = NodePath("ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container/SpeedSpinBox")
success_spin_box = NodePath("ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container2/SuccessRateSpinBox")
repeat_spin_box = NodePath("ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container3/RepeatSpinBox")
tp_gain_spin_box = NodePath("ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container4/TPGainSpinBox")
damage_type_option_button = NodePath("ScrollContainer/BoxContainer/3rd Column/Row9/Box/DamageTypeOptionButton")
element_type_option_button = NodePath("ScrollContainer/BoxContainer/3rd Column/Row9/Box2/ElementTypeOptionButton")
formula_editor = NodePath("ScrollContainer/BoxContainer/3rd Column/FormulaEditor")
notes_edit = NodePath("ScrollContainer/BoxContainer/3rd Column/NotesTextEdit")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="1st Column" type="VBoxContainer" parent="ScrollContainer/BoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/BoxContainer/1st Column"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/1st Column/HBoxContainer"]
layout_mode = 2
text = "Items"

[node name="SaveButton" type="Button" parent="ScrollContainer/BoxContainer/1st Column/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/BoxContainer/1st Column"]
layout_mode = 2

[node name="ItemCountSpinbox" type="SpinBox" parent="ScrollContainer/BoxContainer/1st Column/HBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 9999.0
value = 1.0
alignment = 1

[node name="ChangeItemMaxButton" type="Button" parent="ScrollContainer/BoxContainer/1st Column/HBoxContainer2"]
layout_mode = 2
text = "Change Max"

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/BoxContainer/1st Column"]
custom_minimum_size = Vector2(0, 289.655)
layout_mode = 2

[node name="ItemsBox" type="VBoxContainer" parent="ScrollContainer/BoxContainer/1st Column/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="2nd Column" type="VBoxContainer" parent="ScrollContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2
text = "General Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer"]
layout_mode = 2
text = "Name:                    "

[node name="IconTexture" type="TextureRect" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_txkt2")
expand_mode = 2

[node name="TextureButton" type="Button" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer"]
layout_mode = 2
text = "Set Icon"

[node name="NameEdit" type="LineEdit" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2
text = "Description:"

[node name="DescEdit" type="TextEdit" parent="ScrollContainer/BoxContainer/2nd Column"]
custom_minimum_size = Vector2(445.875, 61.88)
layout_mode = 2
text = "Room for multiple sentences please. Yes please. Multiple sentences should fit here. "
wrap_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer2"]
layout_mode = 2
text = "Item Type:               "

[node name="Label2" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer2"]
layout_mode = 2
text = "Price:      "

[node name="Label3" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer2"]
layout_mode = 2
text = "Consumable:"

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="ItemTypeButton" type="OptionButton" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer3"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Regular Item"
popup/item_0/id = 0
popup/item_1/text = "Key Item"
popup/item_1/id = 1
popup/item_2/text = "Hidden Item A"
popup/item_2/id = 2
popup/item_3/text = "Hidden Item B"
popup/item_3/id = 3

[node name="PriceBox" type="SpinBox" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer3"]
layout_mode = 2

[node name="ConsumableButton" type="OptionButton" parent="ScrollContainer/BoxContainer/2nd Column/HBoxContainer3"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Yes"
popup/item_0/id = 0
popup/item_1/text = "NO"
popup/item_1/id = 1

[node name="Scope Row" type="HBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="ScopeContainer" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/ScopeContainer"]
layout_mode = 2
text = "Side:"

[node name="ScopeOptionButton" type="OptionButton" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/ScopeContainer"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Enemy"
popup/item_1/id = 1
popup/item_2/text = "Ally"
popup/item_2/id = 2
popup/item_3/text = "Enemy & Ally"
popup/item_3/id = 3
popup/item_4/text = "User"
popup/item_4/id = 4

[node name="NumberColumn" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn"]
layout_mode = 2
text = "Number:"

[node name="NumberOption" type="OptionButton" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "One"
popup/item_0/id = 0
popup/item_1/text = "All"
popup/item_1/id = 1
popup/item_2/text = "Random"
popup/item_2/id = 2

[node name="RandomSpinBox" type="SpinBox" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn"]
layout_mode = 2
value = 1.0

[node name="OccasionContainer" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/OccasionContainer"]
layout_mode = 2
text = "Occasion:"

[node name="OccaisonOptionButton" type="OptionButton" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/OccasionContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Battle Screen"
popup/item_0/id = 0
popup/item_1/text = "Menu Screen"
popup/item_1/id = 1
popup/item_2/text = "Always"
popup/item_2/id = 2
popup/item_3/text = "Never"
popup/item_3/id = 3

[node name="Container5" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/Container5"]
layout_mode = 2
text = "Animation:              "

[node name="AnimationOptionButton" type="OptionButton" parent="ScrollContainer/BoxContainer/2nd Column/Scope Row/Container5"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Invocation" type="HSeparator" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="Label3" type="Label" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2
text = "Invocation"
horizontal_alignment = 1

[node name="Invocation Row" type="HBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container"]
layout_mode = 2
text = "Speed:"

[node name="SpeedSpinBox" type="SpinBox" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container"]
layout_mode = 2
min_value = -9999.0
max_value = 9999.0

[node name="Container2" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container2"]
layout_mode = 2
text = "Success:"

[node name="SuccessRateSpinBox" type="SpinBox" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container2"]
layout_mode = 2
value = 100.0
suffix = "%"

[node name="Container3" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container3"]
layout_mode = 2
text = "Repeat:"

[node name="RepeatSpinBox" type="SpinBox" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container3"]
layout_mode = 2
min_value = 1.0
max_value = 99.0
value = 1.0
update_on_text_changed = true

[node name="Container4" type="VBoxContainer" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.365264, 1, 0.335952, 1)
text = "TP Gain:"

[node name="TPGainSpinBox" type="SpinBox" parent="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container4"]
layout_mode = 2
max_value = 9999.0

[node name="3rd Column" type="VBoxContainer" parent="ScrollContainer/BoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="ScrollContainer/BoxContainer/3rd Column"]
layout_mode = 2
text = "Damage"
horizontal_alignment = 1

[node name="Row9" type="HBoxContainer" parent="ScrollContainer/BoxContainer/3rd Column"]
layout_mode = 2

[node name="Box" type="VBoxContainer" parent="ScrollContainer/BoxContainer/3rd Column/Row9"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/3rd Column/Row9/Box"]
layout_mode = 2
text = "Type:"

[node name="DamageTypeOptionButton" type="OptionButton" parent="ScrollContainer/BoxContainer/3rd Column/Row9/Box"]
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "HP Damage"
popup/item_1/id = 1
popup/item_2/text = "MP Damage"
popup/item_2/id = 2
popup/item_3/text = "HP Recover"
popup/item_3/id = 3
popup/item_4/text = "MP Recover"
popup/item_4/id = 4
popup/item_5/text = "HP Drain"
popup/item_5/id = 5
popup/item_6/text = "MP Drain"
popup/item_6/id = 6

[node name="Box2" type="VBoxContainer" parent="ScrollContainer/BoxContainer/3rd Column/Row9"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/BoxContainer/3rd Column/Row9/Box2"]
layout_mode = 2
text = "Element:"

[node name="ElementTypeOptionButton" type="OptionButton" parent="ScrollContainer/BoxContainer/3rd Column/Row9/Box2"]
layout_mode = 2
tooltip_text = "Normal = whatever element the user is attuned to. "
item_count = 1
popup/item_0/text = "Normal Attack"
popup/item_0/id = 0

[node name="Label5" type="Label" parent="ScrollContainer/BoxContainer/3rd Column"]
layout_mode = 2
text = "Damage Formula:"

[node name="FormulaEditor" type="CodeEdit" parent="ScrollContainer/BoxContainer/3rd Column"]
custom_minimum_size = Vector2(0, 80.395)
layout_mode = 2
tooltip_text = "Currently there is no autocomplete support due to a bug that started with Godot version 4.3. "
text = "a.atk * 4 - b.def * 2"
code_completion_enabled = true

[node name="Label6" type="Label" parent="ScrollContainer/BoxContainer/3rd Column"]
layout_mode = 2
text = "Effects"
horizontal_alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/BoxContainer/3rd Column"]
layout_mode = 2
text = "Note"

[node name="NotesTextEdit" type="TextEdit" parent="ScrollContainer/BoxContainer/3rd Column"]
custom_minimum_size = Vector2(0, 206.295)
layout_mode = 2

[connection signal="button_down" from="ScrollContainer/BoxContainer/1st Column/HBoxContainer/SaveButton" to="." method="_save_json"]
[connection signal="button_down" from="ScrollContainer/BoxContainer/1st Column/HBoxContainer2/ChangeItemMaxButton" to="." method="_on_change_item_max_button_button_down"]
[connection signal="button_down" from="ScrollContainer/BoxContainer/2nd Column/HBoxContainer/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="text_changed" from="ScrollContainer/BoxContainer/2nd Column/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_changed" from="ScrollContainer/BoxContainer/2nd Column/DescEdit" to="." method="_on_desc_edit_text_changed"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/2nd Column/HBoxContainer3/ItemTypeButton" to="." method="_on_item_type_button_item_selected"]
[connection signal="value_changed" from="ScrollContainer/BoxContainer/2nd Column/HBoxContainer3/PriceBox" to="." method="_on_price_box_value_changed"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/2nd Column/HBoxContainer3/ConsumableButton" to="." method="_on_consumable_button_item_selected"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/2nd Column/Scope Row/ScopeContainer/ScopeOptionButton" to="." method="_on_scope_option_button_item_selected"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn/NumberOption" to="." method="_on_number_option_item_selected"]
[connection signal="value_changed" from="ScrollContainer/BoxContainer/2nd Column/Scope Row/NumberColumn/RandomSpinBox" to="." method="_on_random_spin_box_value_changed"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/2nd Column/Scope Row/OccasionContainer/OccaisonOptionButton" to="." method="_on_occaison_option_button_item_selected"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/2nd Column/Scope Row/Container5/AnimationOptionButton" to="." method="_on_animation_option_button_item_selected"]
[connection signal="value_changed" from="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container/SpeedSpinBox" to="." method="_on_speed_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container2/SuccessRateSpinBox" to="." method="_on_success_rate_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container3/RepeatSpinBox" to="." method="_on_repeat_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/BoxContainer/2nd Column/Invocation Row/Container4/TPGainSpinBox" to="." method="_on_tp_gain_spin_box_value_changed"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/3rd Column/Row9/Box/DamageTypeOptionButton" to="." method="_on_damage_type_option_button_item_selected"]
[connection signal="item_selected" from="ScrollContainer/BoxContainer/3rd Column/Row9/Box2/ElementTypeOptionButton" to="." method="_on_element_type_option_button_item_selected"]
[connection signal="text_changed" from="ScrollContainer/BoxContainer/3rd Column/FormulaEditor" to="." method="_on_formula_editor_text_changed"]
[connection signal="text_changed" from="ScrollContainer/BoxContainer/3rd Column/NotesTextEdit" to="." method="_on_notes_text_edit_text_changed"]
